--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preload" href="%PUBLIC_URL%/static/images/iPhone_mockup.png" as="image">
     <title>В чем ты силён? #норникель #стажировка #первыйденьвнорникеле</title>
   </head>
   <body>
